--- a/custommobile.css
+++ b/custommobile.css
@@ -2,7 +2,7 @@
     background-color: #277d80;
   }
   
-  ion-app.platform-* .bar-header {
+  ion-app.platform-android .bar-header {
     background-color: #277d80;
   }
 
@@ -66,7 +66,7 @@
   /* 3.5 styles */
   
   /** Header color */
-  .toolbar-background-md,
+  ion-app.platform-android .toolbar-background-md,
   .toolbar-background-ios,
   .toolbar-background-wp {
     background: #277d80;
