--- a/custommobile.css
+++ b/custommobile.css
@@ -106,7 +106,7 @@ ion-app.app-root core-empty-box .core-empty-box .core-empty-box-content {
   .tabs-wp .tab-button[aria-selected=true] .tab-button-icon,
   .tabs-wp .core-tabs-bar a[aria-selected=true].tab-slide .tab-button-icon,
   .core-tabs-bar .tabs-wp a[aria-selected=true].tab-slide .tab-button-icon {
-    color: #277d80;
+    color: #2ac6cc;
   }
   
   /* Tabs color*/
